// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with from and to value 1`] = `
<div
  class="dateTimeFieldFilterType"
>
  <div>
    <div>
      <label
        class="input default left"
      >
        <div
          class="prependedContainer default"
        >
          <span
            aria-label="su-calendar"
            class="su-calendar clickable icon default iconClickable"
            role="button"
            tabindex="0"
          />
        </div>
        <input
          placeholder="MM/DD/YYYY"
          type="text"
          value="01/02/2020"
        />
      </label>
    </div>
  </div>
  <div>
    <div>
      <label
        class="input default left"
      >
        <div
          class="prependedContainer default"
        >
          <span
            aria-label="su-calendar"
            class="su-calendar clickable icon default iconClickable"
            role="button"
            tabindex="0"
          />
        </div>
        <input
          placeholder="MM/DD/YYYY"
          type="text"
          value="01/09/2020"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Render with from and to value 2`] = `
<div
  class="dateTimeFieldFilterType"
>
  <div>
    <div>
      <label
        class="input default left"
      >
        <div
          class="prependedContainer default"
        >
          <span
            aria-label="su-calendar"
            class="su-calendar clickable icon default iconClickable"
            role="button"
            tabindex="0"
          />
        </div>
        <input
          placeholder="MM/DD/YYYY"
          type="text"
          value="02/01/2018"
        />
      </label>
    </div>
  </div>
  <div>
    <div>
      <label
        class="input default left"
      >
        <div
          class="prependedContainer default"
        >
          <span
            aria-label="su-calendar"
            class="su-calendar clickable icon default iconClickable"
            role="button"
            tabindex="0"
          />
        </div>
        <input
          placeholder="MM/DD/YYYY"
          type="text"
          value="05/03/2019"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Render with value of undefined 1`] = `
<div
  class="dateTimeFieldFilterType"
>
  <div>
    <div>
      <label
        class="input default left"
      >
        <div
          class="prependedContainer default"
        >
          <span
            aria-label="su-calendar"
            class="su-calendar clickable icon default iconClickable"
            role="button"
            tabindex="0"
          />
        </div>
        <input
          placeholder="MM/DD/YYYY"
          type="text"
          value=""
        />
      </label>
    </div>
  </div>
  <div>
    <div>
      <label
        class="input default left"
      >
        <div
          class="prependedContainer default"
        >
          <span
            aria-label="su-calendar"
            class="su-calendar clickable icon default iconClickable"
            role="button"
            tabindex="0"
          />
        </div>
        <input
          placeholder="MM/DD/YYYY"
          type="text"
          value=""
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Render with value set by setValue 1`] = `
<div
  class="dateTimeFieldFilterType"
>
  <div>
    <div>
      <label
        class="input default left"
      >
        <div
          class="prependedContainer default"
        >
          <span
            aria-label="su-calendar"
            class="su-calendar clickable icon default iconClickable"
            role="button"
            tabindex="0"
          />
        </div>
        <input
          placeholder="MM/DD/YYYY"
          type="text"
          value="06/03/2017"
        />
      </label>
    </div>
  </div>
  <div>
    <div>
      <label
        class="input default left"
      >
        <div
          class="prependedContainer default"
        >
          <span
            aria-label="su-calendar"
            class="su-calendar clickable icon default iconClickable"
            role="button"
            tabindex="0"
          />
        </div>
        <input
          placeholder="MM/DD/YYYY"
          type="text"
          value="03/06/2018"
        />
      </label>
    </div>
  </div>
</div>
`;
